Tweaks and optimisations